z-index fix for modal above form builder

--- a/jsapp/scss/components/_kobo.modal.scss
+++ b/jsapp/scss/components/_kobo.modal.scss
@@ -6,18 +6,12 @@
     display: flex;
     justify-content: center;
     top: 0px;
+    z-index: 3;
     .modal-open {
       width: 80%;
       max-width:820px;  
     }
   }
-  // .asset-view .modal-backdrop {
-  //   position: fixed;
-  //   top:60px;
-  //   height:calc(100% - 60);
-  //   overflow: hidden;
-  //   z-index: 101;
-  // }
 }
 
 .modal-dialog, .modal-open {
